--- a/templates/bukarek.html
+++ b/templates/bukarek.html
@@ -19,28 +19,38 @@
             </span>
         </a>
         <div class="form-inline">
-        <div class="navbar-text">Halo {{nama}}</div>
-        <a href="/logout">
-            <input type="button" value="Log Out" class="btn btn-outline-danger" style="margin-left: 20px;">
-        </a>
+            {% if isLogin %}
+            <div class="navbar-text">Halo {{nama}}</div>
+            <a href="/logout">
+                <input type="button" value="Log Out" class="btn btn-outline-danger" style="margin-left: 20px;">
+            </a>
+            {% else %}
+            <form action="/login" method="post" enctype="multipart/form-data">
+                <input type="text" name="nama" id="nama" class="form-control" required placeholder="Nama" style="margin-left: 20px;">
+                <input type="text" name="pin" id="pin" class="form-control" placeholder="PIN" required pattern="\d\d\d\d\d\d\d\d" style="margin-left: 20px;">
+                <input type="submit" class="btn btn-outline-success" style="margin-left: 20px;" value="Masuk">
+            </form>
+            {% endif %}
         </div>
     </nav>
 
     <div style="text-align: center; margin-top: 70px;">
         <h1>Pembukaan Rekening Baru</h1>
     </div>
-    <form action="/setor" method="post" enctype="multipart/form-data">
+    <form action="/bukaRekening" method="post" enctype="multipart/form-data">
         <div class="form-group" style="position: static; margin-left: 29%; margin-top: 3%;">
-            <label for="nominalSetor" class="col-form-label">Nama nasabah </label>
-            <input type="text" name="nominalSetor" id="nominalSetor" class="form-control col-7" required placeholder="Nama nasabah"><br>
-            <label for="nominalSetor" class="col-form-label">PIN (8 digit)</label>
-            <input type="text" name="nominalSetor" id="nominalSetor" class="form-control col-7" required placeholder="PIN"><br>
-            <label for="nominalSetor" class="col-form-label">Setoran saldo pertama</label>
-            <input type="text" name="nominalSetor" id="nominalSetor" class="form-control col-7" required placeholder="Saldo pertama"><br><br>
-            <input type="button" value="Buka" class="btn btn-outline-dark col-1" style="position: absolute; left: 62%;">            
+            <label for="nama" class="col-form-label">Nama nasabah </label>
+            <input type="text" name="nama" id="nama" class="form-control col-7" required placeholder="Nama nasabah" pattern="[a-zA-Z]+"><br>
+            <label for="PIN" class="col-form-label">PIN (8 digit)</label>
+            <input type="text" name="PIN" id="PIN" class="form-control col-7" required placeholder="PIN" pattern="\d\d\d\d\d\d\d\d"><br>
+            <label for="setor" class="col-form-label">Setoran saldo pertama</label>
+            <input type="text" name="setor" id="setor" class="form-control col-7" required placeholder="Saldo pertama" pattern="[0-9]+"><br><br>
+            <button type="submit" value="Buka" class="btn btn-outline-dark col-1" style="position: absolute; left: 62%;">Daftar</button>            
         </div>
     </form>
-
+    <div style="text-align: center;">
+        {{message}}
+    </div>
     <div style="position: absolute; bottom: 40px; right: 10px;">
         <a href="/">
             <input type="button" value="Kembali ke menu utama" class="btn btn-outline-secondary">
