Saldo pembukaan rekening minimal, Jumlah nama maksimal, Ganti format data

--- a/templates/bukarek.html
+++ b/templates/bukarek.html
@@ -40,7 +40,7 @@
     <form action="/bukaRekening" method="post" enctype="multipart/form-data">
         <div class="form-group" style="position: static; margin-left: 29%; margin-top: 3%;">
             <label for="nama" class="col-form-label">Nama nasabah </label>
-            <input type="text" name="nama" id="nama" class="form-control col-7" required placeholder="Nama nasabah" pattern="[a-zA-Z]+"><br>
+            <input type="text" name="nama" id="nama" class="form-control col-7" required placeholder="Nama nasabah" pattern="[a-zA-Z]+\s[a-zA-Z]+\s[a-zA-Z]+"><br>
             <label for="PIN" class="col-form-label">PIN (8 digit)</label>
             <input type="text" name="PIN" id="PIN" class="form-control col-7" required placeholder="PIN" pattern="\d\d\d\d\d\d\d\d"><br>
             <label for="setor" class="col-form-label">Setoran saldo pertama</label>
