Halaman info nasabah

--- a/templates/info.html
+++ b/templates/info.html
@@ -27,12 +27,21 @@
     </nav>
 
     <div style="text-align: center; margin-top: 70px;">
-        <h1>Transfer Dana</h1>
+        <h1>Info Nasabah</h1>
     </div>
-    <div class="form-group" style="position: static; margin-left: 29%; margin-top: 3%;">
-        <p>Nama : {{namaNasabah}}</p>
-        <p>PIN : {{PIN}}</p>
-        <p>Saldo : {{saldoNasabah}}</p>
+    <div class="form-group" style="position: static; margin-left: 40%; margin-top: 3%; font-size: larger;">
+        <div class="row">
+            <div class="col-2">Nama</div>
+            <div class="col-5">:&nbsp;{{namaNasabah}}</div>
+        </div>
+        <div class="row">
+            <div class="col-2">PIN</div>
+            <div class="col-5">:&nbsp;{{PIN}}</div>
+        </div>
+        <div class="row">
+            <div class="col-2">Saldo</div>
+            <div class="col-5">:&nbsp;{{saldoNasabah}}</div>
+        </div>
     </div>
 
     <div style="position: absolute; bottom: 40px; right: 10px;">
